# ezhash

./: README.md  pyproject.toml
ezhash/: main.py
