[tool.poetry]
name = "ezhash"
version = "1.0.0"
description = "CLI tool which computes and compares file hash."
authors = ["Naffah Abdulla Rasheed <mail@naffah.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
ezh = "ezhash.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
